--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
     <p id="changeableText">Original text.</p>
 
     <script src="script.js"></script>
-    
-        <div class="reni" id="reni-in-zapada"></div>
-        <div class="reni" id="reni-in-flori"></div>
-        <div class="reni" id="reni-in-piscina"></div>
-
         <div class="reni" ><h2>Chopper e un ren vorbitor</h2></div>
         <div class="reni" id="reni-in-zapada"><h2>Acest este un ID cu numele "reni in zapada"</h2></div>
         <div class="reni" id="reni-in-flori"><h2>Acesta este un ID cunumele "reni in flori"</h2></div>
@@ -41,15 +36,19 @@
     <p>
 
         <p>
-            <img src="1.jpg" width="25%" height="100px">
+            <img src="1.jpg" width="100%" height="1000px">
         </p>
        
         <p>
-            <img src="3.jpg" width="20%" height="100px">
+            <img src="3.jpg" width="20%" height="200px">
         </p>
 
         <p>
-            <img src="4.jpg" width="69%" height="800px">
+            <img src="4.jpg" width="80%" height="800px">
         </p>
+
+        <h3>Pentru mai multe informatii despre pidginul basco-islandez, apasa <a href="https://en.wikipedia.org/wiki/Basque%E2%80%93Icelandic_pidgin" target="_blank">aici</a>.</h3>
+        <h2>Pentru o pauza de relaxare, incearca <a href="https://www.friv.com/old/" target="_blank">aceste jocuri</a>!</h2>
+        <h4>Iar acum, inapoi la <a href="file:///C:/Users/thea2/Desktop/theo/scoala/info/Website-main/Website/index.html" target="_blank">treaba</a>.</h4>
 </body>
 </html>
