--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <div class="reni" id="reni-in-zapada"><h2>Acest este un ID cu numele "reni in zapada"</h2></div>
         <div class="reni" id="reni-in-flori"><h2>Acesta este un ID cunumele "reni in flori"</h2></div>
         <div class="reni" id="reni-in-piscina"><h2>Acesta este un ID cunumele "reni in piscina"</h2></div>
+        <div class="reni" id="reni-in-carrefour"><img src="chopper.jpg" width="30%" height="300px"></div>
+    
     <p>
     <img src="chopper.jpg" width="30%" height="300px">
     <p>
