--- a/index.html
+++ b/index.html
@@ -31,22 +31,20 @@
         <div class="reni" id="reni-in-zapada"><h2>Acest este un ID cu numele "reni in zapada"</h2></div>
         <div class="reni" id="reni-in-flori"><h2>Acesta este un ID cunumele "reni in flori"</h2></div>
         <div class="reni" id="reni-in-piscina"><h2>Acesta este un ID cunumele "reni in piscina"</h2></div>
-        <div class="reni" id="reni-in-carrefour"><img src="chopper.jpg" width="30%" height="300px"></div>
     
     <p>
-    <img src="chopper.jpg" width="30%" height="300px">
+    <img id="reni-in-carrefour"src="chopper.jpg" width="30%" height="300px">
     <p>
+        <p>
+            <img id="reni-in-masina"src="3.jpg" width="30%" height="300px">
+        <p>
 
         <p>
             <img src="1.jpg" width="100%" height="1000px">
         </p>
-       
-        <p>
-            <img src="3.jpg" width="20%" height="200px">
-        </p>
 
         <p>
-            <img src="4.jpg" width="80%" height="800px">
+            <img id="reni-in-casa"src="4.jpg" width="80%" height="800px">
         </p>
 
         <h3>Pentru mai multe informatii despre pidginul basco-islandez, apasa <a href="https://en.wikipedia.org/wiki/Basque%E2%80%93Icelandic_pidgin" target="_blank">aici</a>.</h3>
