--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <button id="pauseMusic">Pause</button>
     <button id="stopMusic">Stop</button>
     <div id="joc">
-        <h2>ദ്ദി(˵ •̀ ᴗ - ˵ ) ✧Instrucțiuni pentru jocദ്ദി(˵ •̀ ᴗ - ˵ ) ✧</h2>
+     
+        <h2>ദ്ദി(˵ •̀ ᴗ - ˵ )ദ്ദി ✧Instrucțiuni pentru joc✧ ദ്ദി(˵ •̀ ᴗ - ˵ )ദ്ദി</h2>
         <p>Încearcă să ghicești numărul corect între 1 și 100!</p>
         <h5>⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟</h5>
         <input type="number" id="guessnumber" placeholder="Introdu numărul">
+           <p id="timer">Au mai ramas 36 de secunde</p>
         <h5>⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟✧⚞🎀・◦・⚟</h5>
         <button id="ghicitor">Ghicește</button>
         <p id="mesaj"></p>
         <button id="reset">Mai încearcă o dată!(☞ ͡° ͜ʖ ͡°)☞</button>
     </div>
-    <div class="limonada" id="hehe"><img src="rata.jpg"></img></div>
+    <div class="limonada" id="hehe"><img id="rata" src="rata.jpg"></img></div>
     <audio id="background" src="back.mp3"></audio>
     <script src="script.js"></script>
 
